--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			function setupTestMode()
 			{
 				testMode = true;
-				var counter = 0;
+				/*var counter = 0;
 				for (let i = 0; i < map.length; i++)
 				{
 					for (let j = 0; j < map.length; j++)
@@ -35,7 +35,7 @@
 							counter++;
 						}
 					}
-				}
+				}*/
 				gear[0] = "Flamethrower";
 				gear[1] = "Cloak";
 				gear[2] = "Crossbow";
@@ -338,7 +338,9 @@
 			
 			var monsterNames = [
 					"Ghost",
-					"Crocodile"/*,
+					"Crocodile",
+					"Crocodile",
+					"Ghost"/*,
 					"Scorpian",
 					"Skeleton",
 					"Ogre",
